updated choice selector and added an instance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 GlobalDefaultGameMode="/Script/ue5jam.ue5jamGameMode"
+GameInstanceClass=/Game/Blueprints/BP_ChoiceInstance.BP_ChoiceInstance_C
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
