Connect ChoiceScene and ErikMap

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/TopDown/Maps/ChoiceScene.ChoiceScene
+EditorStartupMap=/Game/TopDown/Maps/ChoiceScene.ChoiceScene
 GlobalDefaultGameMode="/Script/ue5jam.ue5jamGameMode"
 GameInstanceClass=/Game/Blueprints/BP_ChoiceInstance.BP_ChoiceInstance_C
 
